fixed encounter view/edit toggle, converted page to material, addressed avatar image stretching

--- a/wildbook-war/src/main/less/_custom.less
+++ b/wildbook-war/src/main/less/_custom.less
@@ -649,6 +649,10 @@ span.active {
     margin-right:5px;
 }
 
+.mr-10 {
+    margin-right:10px;
+}
+
 .mb-5{
     margin-bottom:10px
 }
@@ -695,10 +699,10 @@ span.active {
 
 /* individual avatar */
 .indiv-avatar-container{
-    width: 80%;
+    width: 65%;
     height: 105px;
     border: 2px solid rgba(0,0,0,0.12);
-    border-radius: 13px;
+    border-radius: 5px;
 }
 
 .indiv-avatar-container.black-background {
@@ -706,8 +710,9 @@ span.active {
 }
 
 .avatar-img {
-    width: 100%;
-    max-height: 83px;
+    width: auto;
+    height: 83px;
+    max-width: 95%;
 }
 
 .individual-avatar .active {
